change URL of app icon in html templates

--- a/src/pages/privacy-policy/privacy-policy.html
+++ b/src/pages/privacy-policy/privacy-policy.html
@@ -26,7 +26,7 @@
         <div class="card-title-block">
           <ion-item>
             <ion-avatar item-start>
-              <img src="https://cdn.agility360app.net/">
+              <img src="assets/img/agility360-logo-transparent-512x512.png" />
             </ion-avatar>
             <p>Updated: {{ post.date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
           </ion-item>
