--- a/src/pages/confirm/confirm.html
+++ b/src/pages/confirm/confirm.html
@@ -6,7 +6,7 @@
 </style>
 <ion-content>
   <div text-center class="logo">
-    <img src="https://cdn.agility360app.net/" width="35%" />
+    <img src="assets/img/agility360-logo-transparent-512x512.png" />
   </div>
   <div padding>
     <strong><p class="system-message">{{ systemMessage }}</p></strong>
