--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div text-center class="logo">
-    <img src=appLogo />
+    <img src="assets/img/agility360-logo-transparent-512x512.png" />
   </div>
   <form (submit)="login()" [formGroup]="formGroup">
     <strong><p class="error-message" *ngIf="errMsg" >{{errMsg}}</p></strong>
