UI tweaks - punch list

--- a/src/pages/certification-detail/certification-detail.html
+++ b/src/pages/certification-detail/certification-detail.html
@@ -53,7 +53,7 @@
         name="date_received"></ion-datetime>
     </ion-item>
     <ion-item>
-      <ion-label stacked class="form-label">Expire Date (optional)</ion-label>
+      <ion-label stacked class="form-label">Expiration Date (optional)</ion-label>
       <ion-datetime
         class="editable-field"
         displayFormat="MMMM D, YYYY"
