education history - graduated flag label

--- a/src/pages/education-detail/education-detail.html
+++ b/src/pages/education-detail/education-detail.html
@@ -41,7 +41,7 @@
         placeholder="Degree"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label stacked class="form-label">Graduated - {{ graduated }}</ion-label>
+      <ion-label stacked class="form-label">Graduated</ion-label>
       <ion-checkbox
         class="editable-field"
         [(ngModel)]="graduated"
