scaffold resume uploader

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -45,6 +45,10 @@
       <ion-icon name="ribbon" item-start></ion-icon>
       <ion-label>Certifications</ion-label>
     </button>
+    <button ion-item [navPush]="resumeUploaderPage">
+      <ion-icon name="cloud-upload" item-start></ion-icon>
+      <ion-label>Resume</ion-label>
+    </button>
 
   </ion-list>
 
