--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -47,7 +47,7 @@
     </button>
     <button ion-item [navPush]="resumeUploaderPage">
       <ion-icon name="cloud-upload" item-start></ion-icon>
-      <ion-label>Resume</ion-label>
+      <ion-label>Resume Uploader</ion-label>
     </button>
 
   </ion-list>
