--- a/src/pages/resume-uploader/resume-uploader.html
+++ b/src/pages/resume-uploader/resume-uploader.html
@@ -28,12 +28,6 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <div text-center>
-    <input #resume type="file" (change)="uploadFromFile($event)" />
-    <div class="resume">
-      <img src="{{ url }}" />
-    </div>
-  </div>
-
+  <pdf-viewer src="{{ url }}"></pdf-viewer>
 
 </ion-content>
