--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Agility 360</title>
+  <!--
+  McDaniel Nov-2017. The slight modification to the viewport meta tag below regards changes in app requirements for iOS 11
+  read more here: http://blog.ionicframework.com/ios-11-checklist/
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  -->
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
